--- a/.env.local.example
+++ b/.env.local.example
@@ -4,5 +4,5 @@ NEXT_PUBLIC_ONCHAINKIT_API_KEY=your_api_key_here
 # Base RPC Endpoint
 NEXT_PUBLIC_BASE_RPC_URL=https://mainnet.base.org
 
-# Farcaster Mini App Config
+# App URL
 NEXT_PUBLIC_APP_URL=https://nftsocializer.farcaster.xyz
